# api-docs.yml
@@ -219,8 +219,6 @@ paths:
   /mentor_profiles:
     get:
       summary: Get all mentor profiles
-      security:
-        - NormalUser: []
       parameters:
         - in: query
           name: take
@@ -258,7 +256,7 @@ paths:
     post:
       summary: Create a new mentor profile
       security:
-        - NormalUser: []
+        - OwnerUser: []
       requestBody:
         required: true
         content:
@@ -282,8 +280,6 @@ paths:
   /mentor_profiles/{id}:
     get:
       summary: Get a mentor profile by ID
-      security:
-        - NormalUser: []
       parameters:
         - name: id
           in: path
@@ -304,7 +300,7 @@ paths:
         update mentor profiles.
         **NOTE**: **hashtags** and **categories** are replaced with the new ones
       security:
-        - NormalUser: []
+        - OwnerUser: []
       parameters:
         - name: id
           in: path
@@ -335,6 +331,8 @@ paths:
   /reservations:
     get:
       summary: Get all reservations
+      security:
+        - AdminUser: [ ]
       description: |
         **ROLE**\
         \
